--- a/.github/workflows/publish-kb.yml
+++ b/.github/workflows/publish-kb.yml
@@ -15,7 +15,7 @@ concurrency:
 
 jobs:
   publish_kb:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
      - name: Checkout
        uses: actions/checkout@v3 
