--- a/_config.yml
+++ b/_config.yml
@@ -228,6 +228,9 @@ navigation:
      "*components/filemanager/data-binding":
         title: "Data Binding"
         position: 2
+     "*components/aiprompt/views":
+        title: "Views"
+        position: 10
 
 ## List helpers directory names and order here, like this:
      "*appearance":
@@ -266,6 +269,8 @@ navigation:
         title: "Spreadsheet"
      "*gauges/arc":
         title: "Arc"
+     "*aiprompt":
+        title: "AIPrompt"
      "*appbar":
         title: "AppBar"
      "*autocomplete":
@@ -620,6 +625,7 @@ intro_columns:
   -
     title: "Interactivity and UX"
     items:
+      "AIPrompt": "aiprompt-overview"
       "Loader": "loader-overview"
       "LoaderContainer": "loadercontainer-overview"
       "Skeleton": "skeleton-overview"
