chore(popup): add the popup in config file

--- a/_config.yml
+++ b/_config.yml
@@ -268,6 +268,8 @@ navigation:
         title: "Arc"
      "*appbar":
         title: "AppBar"
+     "*popup":
+        title: "Popup"
      "*autocomplete":
         title: "AutoComplete"
      "*avatar":
@@ -627,6 +629,7 @@ intro_columns:
       "Progress Bar": "progressbar-overview"
       "Chunk Progress Bar": "chunkprogressbar-overview"
       "Tooltip": "tooltip-overview"
+      "Popup": "popup-overview"
   -
     title: "Documents"
     items:
