chore(popover): add the popover to config file

--- a/_config.yml
+++ b/_config.yml
@@ -394,6 +394,8 @@ navigation:
         title: "Notification"
      "*popup":
         title: "Popup"
+     "*popover":
+        title: "Popover"
      "*numerictextbox":
         title: "NumericTextBox"
      "*pdfviewer":
@@ -626,6 +628,7 @@ intro_columns:
       "Notification": "notification-overview"
       "Progress Bar": "progressbar-overview"
       "Chunk Progress Bar": "chunkprogressbar-overview"
+      "Popover": "popover-overview"
       "Tooltip": "tooltip-overview"
   -
     title: "Documents"
