docs(Rating): add rating component docs

--- a/_config.yml
+++ b/_config.yml
@@ -415,6 +415,8 @@ navigation:
         title: "QRCode"
      "*/radiobutton":
         title: "RadioButton"
+     "*rating":
+        title: "Rating"
      "*gauges/radial":
         title: "Radial"
      "*rangeslider":
