--- a/_config.yml
+++ b/_config.yml
@@ -505,6 +505,7 @@ intro_columns:
       "ListView": "listview-overview"
       "Pager": "pager-overview"
       "PivotGrid": "pivotgrid-overview"
+      "Spreadsheet": "spreadsheet-overview"
       "TreeList": "treelist-overview"
   -
     title: "File Management"
