--- a/_config.yml
+++ b/_config.yml
@@ -168,6 +168,9 @@ navigation:
      "*components/chart/tooltip":
         title: "Tooltips"
         position: 31
+     "*components/sankeydiagram/elements":
+        title: "Elements"
+        position: 3        
      "*components/stockchart/types":
         title: "Types"
         position: 12
@@ -433,6 +436,8 @@ navigation:
         title: "RadioGroup"
      "*rootcomponent":
         title: "RootComponent"
+     "*sankeydiagram":
+        title: "Sankey Diagram"
      "*scheduler":
         title: "Scheduler"
      "*scrollview":
