--- a/_config.yml
+++ b/_config.yml
@@ -170,7 +170,10 @@ navigation:
         position: 31
      "*components/sankeydiagram/elements":
         title: "Elements"
-        position: 3        
+        position: 5
+     "*components/sankeydiagram/customization":
+        title: "Customization"
+        position: 7       
      "*components/stockchart/types":
         title: "Types"
         position: 12
