--- a/_config.yml
+++ b/_config.yml
@@ -168,12 +168,9 @@ navigation:
      "*components/chart/tooltip":
         title: "Tooltips"
         position: 31
-     "*components/sankeydiagram/elements":
+     "*components/sankey/elements":
         title: "Elements"
-        position: 5
-     "*components/sankeydiagram/customization":
-        title: "Customization"
-        position: 7       
+        position: 5  
      "*components/stockchart/types":
         title: "Types"
         position: 12
@@ -439,8 +436,8 @@ navigation:
         title: "RadioGroup"
      "*rootcomponent":
         title: "RootComponent"
-     "*sankeydiagram":
-        title: "Sankey Diagram"
+     "*sankey":
+        title: "Sankey"
      "*scheduler":
         title: "Scheduler"
      "*scrollview":
