chore: get token from Akeyless

--- a/.github/workflows/publish-kb.yml
+++ b/.github/workflows/publish-kb.yml
@@ -24,6 +24,13 @@ jobs:
 
       - name: Checkout
         uses: actions/checkout@v4
+      
+      - name: Import Secrets
+        id: import-secrets
+        uses: LanceMcCarthy/akeyless-action@v3
+        with:
+          access-id: ${{ secrets.GH_AKEYLESS_ACCESS_ID }}
+          static-secrets: '{ "/WebComponents/prod/tokens/GH_TOKEN": "GH_TOKEN" }'
 
       - name: Create branch
         run: |
@@ -42,4 +49,4 @@ jobs:
       - name: Create pull request
         run: gh pr create --fill
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ steps.import-secrets.outputs.GH_TOKEN }}
