Test Update CODEOWNERS

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,3 +1,1 @@
-* @telerik/blazor-docs-admins
-* @telerik/blazor-support
-* @telerik/docs-reviewers
+* @telerik/blazor-docs-admins @telerik/blazor-support @telerik/docs-reviewers
