--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,3 @@
-* @telerik/blazor-docs-admins @telerik/blazor-support @telerik/docs-reviewers
+* @telerik/blazor-docs-admins
+* @telerik/blazor-support
+* @telerik/docs-reviewers
