--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,3 @@
-* @telerik/blazor-support @telerik/blazor-docs-admins @telerik/docs-reviewers
+* @telerik/blazor-support 
+* @telerik/blazor-docs-admins 
+* @telerik/docs-reviewers
