--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,4 +1,11 @@
 *                @telerik/blazor-support @telerik/blazor-docs-admins @telerik/docs-reviewers
 
 *.md             @telerik/blazor-support @telerik/docs-reviewers
+*.cmd            @telerik/blazor-support
+*.config         @telerik/blazor-support
+*.conf           @telerik/blazor-support
+*.html           @telerik/blazor-support
+*.json           @telerik/blazor-support
+*.rb             @telerik/blazor-support
+*.yml            @telerik/blazor-support
 knowledge-base/* @telerik/blazor-support
