fixing trial link

--- a/docs-builder.yml
+++ b/docs-builder.yml
@@ -7,7 +7,7 @@ product-id: 1952
 product-code: BLAZOR
 product-name: Telerik UI for Blazor
 product-url: https://www.telerik.com/blazor-ui
-product-trial-url: https://www.telerik.com/download-trial-file/v2-b/ui-for-blazor
+product-trial-url: https://www.telerik.com/try/ui-for-blazor
 contribute-url: https://github.com/telerik/blazor-docs/edit/master
 search-engine-id: 4729071e3f011471f
 avatar-path: ./images/avatar-ninja.svg
