--- a/docs-builder.yml
+++ b/docs-builder.yml
@@ -16,6 +16,7 @@ img-max-width: 100%
 table-layout: fixed
 enable-tabbed-code-blocks: true
 blazor-repl: true
+pdf-cover-png-path: ./images/pdf-cover.png
 
 cta-overview: The @Subject component is part of @ProductLink, a professional grade UI library with 110+ native components for building modern and feature-rich applications. To try it out sign up for a free 30-day trial.
 cta-intro: "@ProductLink is a professional grade UI library with 110+ native components for building modern and feature-rich applications. To try it out sign up for a free 30-day trial."
