--- a/.github/workflows/pull_request_production_closed.yml
+++ b/.github/workflows/pull_request_production_closed.yml
@@ -5,7 +5,7 @@ on:
     types: [closed]
 jobs:
   delete_production_branch:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
       - name: checkout
