--- a/.github/workflows/sync-a11y.yml
+++ b/.github/workflows/sync-a11y.yml
@@ -11,7 +11,7 @@ jobs:
   sync:
     if: github.actor != 'kendo-bot'
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     
     permissions:
       contents: write
